collapsable div fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,6 +104,7 @@ img {
     border-bottom: solid black;
     border-radius: 10px;
     background-color: lightgray;
+    display: none;
 }
 
 #navbar {
